Review and Java 17 Changes
Changes added as per Code Review
SonarLint after migration to Java 17